--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -28,6 +28,28 @@ body {
     color: #ffffff;
     font-family: ASAP;
 }
+.controlButtons {
+    position: absolute;
+    left: 20px;
+    width: 100px;
+    button {
+        height: 50px;
+        width: 100px;
+        margin-bottom: 20px;
+        border-radius: 10px;
+        background-color: #fff;
+        border: none;
+         color: #000000;
+    }
+
+    button:hover{
+        background-color: #88ce02;
+    }
+
+    button:focus{
+        outline: 0;
+    }
+}
 
 .content-holder {
     position: relative;
@@ -43,14 +65,14 @@ body {
         height: 100px;
         max-width: 800px;
         text-align: center;
-
+        img {
+            height: 80%;
+            margin-right: 15px;
+            margin-left: 15px;
+        }
     }
 
-    .tools img {
-        height: 80%;
-        margin-right: 15px;
-        margin-left: 15px;
-    }
+
 
     .title {
         text-align: center;
