Use of timeline time with timelineMax, use of from too

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -27,6 +27,7 @@ body {
     transform-style: preserve-3d;
     color: #ffffff;
     font-family: ASAP;
+    overflow: hidden;
 }
 .controlButtons {
     position: absolute;
